Modification, ajout de fonction

--- a/index.html
+++ b/index.html
@@ -116,9 +116,33 @@
 									</div>
 								</div>
 								<ul class="actions special">
-									<li><a href="#" class="button style1 large">Get Started</a></li>
-									<li><a href="#" class="button style2 large">More Info</a></li>
+									<li><a href="https://www.23andme.com/en-int/" target = "_blank" class="button style1 large">Démarrez</a></li>
+
+									<li>
+
+										<a href="#" id="btnPopup" class="button style2 large rotating">+ d'infos</a>
+										<div id="overlay" class="overlay">
+											<div id="popup" class="popup">
+												<span id="btnClose" class="btnClose">EXIT</span>
+												<p>
+													"L'édition génomique ou modification localisée de séquence génomique
+													(genome editing pour les anglophones) regroupe un ensemble de techniques
+													e manipulation du génome visant à la modification du matériel (et donc de
+													l'information) génétique. Ces techniques sont plus précises et ciblées que
+													les techniques OGM historiques qui voient ces organismes transformés par
+													transgenèse qui introduit des modifications génétiques au niveau d'un site
+													« au hasard » dans le génome."
+												</p>
+											</div>
+										</div>
+									</li>
 								</ul>
+
+
+
+
+
+
 							</section>
 
 					</div>
